--- a/Horion.vcxproj
+++ b/Horion.vcxproj
@@ -303,6 +303,7 @@
     <ClCompile Include="Horion\Module\Modules\FastLadder.cpp" />
     <ClCompile Include="Horion\Module\Modules\Fly.cpp" />
     <ClCompile Include="Horion\Module\Modules\HiveFly.cpp" />
+    <ClCompile Include="Horion\Module\Modules\MineplexFly.cpp" />
     <ClCompile Include="Horion\Module\Modules\FollowPathModule.cpp" />
     <ClCompile Include="Horion\Module\Modules\Freecam.cpp" />
     <ClCompile Include="Horion\Module\Modules\Freelook.cpp" />
@@ -479,6 +480,7 @@
     <ClInclude Include="Horion\Module\Modules\FastLadder.h" />
     <ClInclude Include="Horion\Module\Modules\Fly.h" />
     <ClInclude Include="Horion\Module\Modules\HiveFly.h" />
+    <ClInclude Include="Horion\Module\Modules\MineplexFly.h" />
     <ClInclude Include="Horion\Module\Modules\FollowPathModule.h" />
     <ClInclude Include="Horion\Module\Modules\Freecam.h" />
     <ClInclude Include="Horion\Module\Modules\Freelook.h" />
