--- a/Horion.vcxproj
+++ b/Horion.vcxproj
@@ -363,6 +363,7 @@
     <ClCompile Include="Horion\Module\Modules\Strafe.cpp" />
     <ClCompile Include="Horion\Module\Modules\Switcher.cpp" />
     <ClCompile Include="Horion\Module\Modules\Longjump.cpp" />
+    <ClCompile Include="Horion\Module\Modules\Twerk.cpp" />
     <ClCompile Include="Horion\path\goals\JoeGoal.cpp" />
     <ClCompile Include="Horion\path\goals\JoeGoalXYZ.cpp" />
     <ClCompile Include="Horion\path\goals\JoeGoalXZ.cpp" />
@@ -544,6 +545,7 @@
     <ClInclude Include="Horion\Module\Modules\Strafe.h" />
     <ClInclude Include="Horion\Module\Modules\Switcher.h" />
     <ClInclude Include="Horion\Module\Modules\Longjump.h" />
+    <ClInclude Include="Horion\Module\Modules\Twerk.h" />
     <ClInclude Include="Horion\path\goals\JoeGoal.h" />
     <ClInclude Include="Horion\path\goals\JoeGoalXYZ.h" />
     <ClInclude Include="Horion\path\goals\JoeGoalXZ.h" />
